# home-optimizer

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  TASKS.md  addon.sh  build.yaml  config.yaml  instructions-agents.md  instructions.md  local.json  local.sh  pyproject.toml  run.sh  sensors.json
.github/: copilot-instructions.md
.github/workflows/: python-lint.yml
addon/: Dockerfile  build.yaml  config.yaml  requirements.txt  run.sh
addon/src/: client.py  climate.py  collector.py  config.py  context.py  coordinator.py  database.py  dhw.py  load.py  model.py  mpc.py  optimizer.py  planner.py  shutter.py  solar.py  thermal.py  utils.py  weather.py  webapi.py
addon/templates/: index.html
beta/: README.md  instructions.md
docs/: calibration.md  local_runner.md
examples/: dhw_active_charge_model_probe.py  dhw_active_diagnostic.py  dhw_common_mode_mismatch_diagnostic.py  minimal_run.py  telemetry_collection.py
src/: addon.py  room.py  thermisch_id.py
src/app/: container.py  logger.py  prediction_service.py  settings.py  state_service.py  training_service.py
src/client/: homeassistant.py  influxdb.py
src/config/: config_loaders.py  sensor_definitions.py  sensors.py
src/database/: models.py  session.py
src/domain/: models.py  parser.py  time.py
src/domain/models/: config.py
src/features/: forecaster.py  generator.py  loader.py
src/home_optimizer/: __init__.py  __main__.py  addon.py  api.py  combined_mpc.py  cop_model.py  database.py  dhw_model.py  kalman.py  local_runner.py  mpc.py  mpc_scheduler.py  optimizer.py  price_model.py  settings.py  thermal_model.py  types.py
src/home_optimizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/home_optimizer/app/: __init__.py  container.py  container_factories.py  electricity_price_scheduler.py  forecast_scheduler.py  historical_weather_scheduler.py  history_import_jobs.py  history_import_requests.py  live_collection_scheduler.py  logging.py  model_training_runner.py  model_training_scheduler.py  model_training_service.py  ports.py  settings.py  settings_loader.py  telemetry_scheduler.py
src/home_optimizer/application/: __init__.py  forecasting.py  models.py  optimizer.py  pipeline.py  request_handling.py  request_projection.py  runtime.py
src/home_optimizer/bootstrap/: dependencies.py  settings.py
src/home_optimizer/calibration/: __init__.py  __main__.py  cop_offline.py  dataset.py  dhw_active.py  dhw_standby.py  models.py  service.py  settings_factory.py  ufh_active.py  ufh_offline.py
src/home_optimizer/control/: __init__.py  mpc.py  problem_builder.py  supervisors.py
src/home_optimizer/domain/: __init__.py  building_model.py  charts.py  control.py  dataset_resampling.py  forecast.py  forecast_resampling.py  heatpump_state.py  historical_weather.py  identified_model.py  kpis.py  location.py  models.py  names.py  prediction_evaluation.py  pricing.py  room_temperature_model.py  sensor_factory.py  sensors.py  series.py  series_transforms.py  signals.py  state_space.py  target_schedule.py  time.py  timeseries.py  types.py  weather_codes.py
src/home_optimizer/entrypoints/: __init__.py  addon.py  backtest_mpc_closed_loop.py  backtest_prediction.py  backtest_thermal_output.py  local.py  (+2 more)
src/importer/: history_importer.py
src/infrastructure/: influx.py  storage.py
src/web/: app.py  charts.py  server.py
testing/: data.json  run.sh
testing/src/: client.py  climate.py  collector.py  config.py  context.py  coordinator.py  database.py  dhw.py  load.py  model.py  mpc.py  optimizer.py  planner.py  price.py  shutter.py  solar.py  statemachine.py  thermal.py  utils.py  weather.py  webapi.py
testing/templates/: index.html
testing/tests/: analyze_model.py  simulate_mpc.py  simulate_optimizer.py  simulate_solar.py  test_optimizer.py  validate_model.py
tests/: conftest.py  test_addon.py  test_api.py  test_application_architecture.py  test_building_model_repository.py  test_calibration.py  test_calibration_cli.py  test_control_oriented_diagnostics.py  test_control_oriented_mpc_service.py  test_control_oriented_setpoint_mpc_service.py  test_control_oriented_setpoint_prediction_service.py  test_control_oriented_state_space_model.py  test_control_oriented_state_space_service.py  test_cop_model.py  test_daily_kpi_service.py  test_dashboard_charts_service.py  test_dashboard_repository.py  test_dataset_repository.py  test_dataset_service.py  test_dhw_model.py  test_ekf.py  test_electricity_price_repository.py  test_electricity_price_service.py  test_forecasting.py  test_heat_pump_sequencer.py  test_history_importer.py  test_home_assistant_gateway.py  test_home_assistant_location.py  test_identification_persistence.py  test_identification_room_model.py  test_identification_service.py  test_identified_model_repository.py  test_kalman.py  test_live_collection.py  test_local_gateway.py  test_local_runner.py  test_logging.py  test_model_training_service.py  test_model_version_repository.py  test_modeling_service.py  (+34 more)
(+276 files in other folders)
