[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "home-optimizer"
version = "0.10"
description = "Slimme warmtepompregeling met MPC en automatische kalibratie, gericht op maximale zelfconsumptie van zonne-energie en minimale energiekosten."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "gerjanvdbosch" },
]
dependencies = [
  "plotly>=5.20",
  "httpx>=0.27",
  "pandas>=2.2",
  "numpy>=1.26",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "influxdb-client>=1.43",
  "pydantic>=2.7",
  "APScheduler>=3.10",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "pyflakes>=3.2",
  "pyright>=1.1,<2.0",
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
home-optimizer-addon = "addon:main"
home-optimizer-local = "local:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
home_optimizer = ["templates/*.html"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.per-file-ignores]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]
extraPaths = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
