[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "home-optimizer"
version = "0.11"
description = "A Home Assistant add-on that learns your home's thermal behavior and uses model predictive control to schedule your heat pump around solar production and electricity prices."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "gerjanvdbosch" },
]
dependencies = [
    "plotly>=5.20",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.11",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.7",
    "pyomo>=6.8",
    "highspy>=1.8",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "pyflakes>=3.2",
    "pyright>=1.1,<2.0",
    "pytest>=8.0",
    "ruff>=0.4",
    "import-linter>=2.0",
]

[project.scripts]
web = "web:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.per-file-ignores]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

